# AI-Video-Caption-Generator

./: .gitignore  README.md  app.py  burn_captions.py  extract_audio.py  generate_srt.py  main.py  pyproject.toml  transcribe_audio.py
captions/: output.srt
